--- a/ProxyVirtualPatternDemo/ProxyVirtualPatternDemo/ProxyVirtualPatternDemo.csproj
+++ b/ProxyVirtualPatternDemo/ProxyVirtualPatternDemo/ProxyVirtualPatternDemo.csproj
@@ -55,8 +55,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Shape.cs" />
-    <Compile Include="Square.cs" />
+    <Compile Include="CreateShape.cs" />
+    <Compile Include="CircleProxy.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
