--- a/ProxyVirtualPatternDemo/ProxyVirtualPatternDemo/ProxyVirtualPatternDemo.csproj
+++ b/ProxyVirtualPatternDemo/ProxyVirtualPatternDemo/ProxyVirtualPatternDemo.csproj
@@ -55,7 +55,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="CreateShape.cs" />
+    <Compile Include="IShape.cs" />
     <Compile Include="CircleProxy.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
