--- a/ProxyVirtualPatternDemo/ProxyVirtualPatternDemo/ProxyVirtualPatternDemo.csproj
+++ b/ProxyVirtualPatternDemo/ProxyVirtualPatternDemo/ProxyVirtualPatternDemo.csproj
@@ -46,7 +46,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Circle.cs" />
+    <Compile Include="Hero.cs" />
+    <Compile Include="IVisitable.cs" />
+    <Compile Include="IVisitor.cs" />
+    <Compile Include="Mage.cs" />
+    <Compile Include="Wolf.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -55,9 +59,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="IShape.cs" />
-    <Compile Include="ShapeProxy.cs" />
-    <Compile Include="Square.cs" />
+    <Compile Include="IMonster.cs" />
+    <Compile Include="MonsterProxy.cs" />
+    <Compile Include="MagicFrog.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
