--- a/ProxyVirtualPatternDemo/ProxyVirtualPatternDemo/ProxyVirtualPatternDemo.csproj
+++ b/ProxyVirtualPatternDemo/ProxyVirtualPatternDemo/ProxyVirtualPatternDemo.csproj
@@ -50,6 +50,12 @@
     <Compile Include="IVisitable.cs" />
     <Compile Include="IVisitor.cs" />
     <Compile Include="Mage.cs" />
+    <Compile Include="VisitorForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VisitorForm.Designer.cs">
+      <DependentUpon>VisitorForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Wolf.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -74,6 +80,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="VisitorForm.resx">
+      <DependentUpon>VisitorForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
